<resources>
    <string name="sq311">red, blue, yellow, green</string>
    <string name="app_name">IQ</string>
    <string name="name">Name</string>
    <string name="home">We\'re on a mission to advance the understanding of human cognition</string>
    <string name="next">Next</string>
    <string name="home2">We turn cognitive tasks into games that challenge abilities like memory and attention</string>
    <string name="start">Start</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="english_profeciency_level">English Proficiency level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="proceed">Proceed</string>
    <string name="spelling">Choose the misspelled word</string>
    <string name="which_word">Which of the following words are incorrectly spelled?</string>
    <string name="choose_the_pair_of_words_that_best_completes_the_sentence">Choose the pair of words that best completes the sentence</string>
    <string name="plays_train">Plays, train</string>
    <string name="sleeping_ship">Sleeping, ship</string>
    <string name="wakes_up_bus">Wakes up, bus</string>
    <string name="opens_up_car">Opens up, car</string>
    <string name="door">Door</string>
    <string name="ketty">Ketty</string>
    <string name="chicken">Chicken</string>
    <string name="bag">Bag</string>
    <string name="ball">Ball</string>
    <string name="unicorn">Unicorn</string>
    <string name="car">Car</string>
    <string name="gumboll">Gumboll</string>
    <string name="the_boy_early_for_the_school">The boy ...... early for the school ......</string>
    <string name="engineer_club">Engineer, club</string>
    <string name="surgeon_patient">Surgeon, patient</string>
    <string name="doctor_sick_person">Doctor, sick person</string>
    <string name="programmer_player">Programmer, player</string>
    <string name="eleqtricity">Eleqtricity</string>
    <string name="android">Android</string>
    <string name="fusion">Fusion</string>
    <string name="laptop">Laptop</string>
    <string name="refrijerator">Refrijerator</string>
    <string name="medical">Medical</string>
    <string name="wireless">Wireless</string>
    <string name="the_performed_a_heart_surgery_for_the">The ...... performed a heart surgery for the ......</string>
    <string name="_1_00">1:00</string>
    <string name="choose_the_word_s_that_best_completes_the_sentence">Choose the word(s) that best completes the sentence</string>
    <string name="thus">Thus</string>
    <string name="colonel">Colonel</string>
    <string name="irregardless">Irregardless</string>
    <string name="literaly">Literaly</string>
    <string name="i_love_to_read_to_sing_to_jump_rope">I love to read, to sing, to jump rope ......</string>
    <string name="access">Access</string>
    <string name="and_i_dance">And I dance</string>
    <string name="and_dancing">And dancing</string>
    <string name="or_to_have_danced">Or to have danced</string>
    <string name="and_to_dance">And to dance</string>
    <string name="the_students_couldn_t_enter_the_teachers_room_because_they_didn_t_have_to_it">The students couldn\'t enter the teachers\' room because they didn\'t have ...... to it.</string>
    <string name="ticket">Ticket</string>
    <string name="agreement">Agreement</string>
    <string name="money">Money</string>
    <string name="heart">Heart</string>
    <string name="vein">Vein</string>
    <string name="artery">Artery</string>
    <string name="flow">Flow</string>
    <string name="identify_the_relationshop_between_the_word_group">Identify the relationship between the word group</string>
    <string name="wool_silk_leather_cotton">Wool, silk, leather, cotton</string>
    <string name="fur">Fur</string>
    <string name="animal">Animal</string>
    <string name="clothes">Clothes</string>
    <string name="material">Material</string>
    <string name="water_is_to_pump_as_blood_is_to">Water is to pump as blood is to ......</string>
    <string name="alps_himalayas_pennines_andes">Alps, Himalayas, Pennines, Andes</string>
    <string name="mountain">Mountain</string>
    <string name="mountain_range">Mountain Range</string>
    <string name="climber">Climber</string>
    <string name="snow">Snow</string>
    <string name="path">Path</string>
    <string name="poetry_is_to_rhyme_as_philosophy_is_to">Poetry is to rhyme as philosophy is to ......</string>
    <string name="drop">Drop</string>
    <string name="spit">Spit</string>
    <string name="squel">Squel</string>
    <string name="fall">Fall</string>
    <string name="imagination">Imagination</string>
    <string name="music">Music</string>
    <string name="bi_laws">Bi-laws</string>
    <string name="theory">Theory</string>
    <string name="train">Train</string>
    <string name="wheat">Wheat</string>
    <string name="holy">Holy</string>
    <string name="is_to_trail_as_grain_is_to_grail">...... is to trail as grain is to grail</string>
    <string name="check_the_two_words_that_mean_the_same_for_you">Check the two words that mean the same for you</string>
    <string name="is_to_anger_as_fear_is_to_threat">...... is to anger as fear is to threat</string>
    <string name="provocation">Provocation</string>
    <string name="compulsion">Compulsion</string>
    <string name="panic">Panic</string>
    <string name="life_is_to_autobiography_as_witness_is_to">Life is to autobiography as witness is to ......</string>
    <string name="paperworks">Paperworks</string>
    <string name="force">Force</string>
    <string name="ecstasy">Ecstasy</string>
    <string name="truth">Truth</string>
    <string name="documents">Documents</string>
    <string name="acceptance">Acceptance</string>
    <string name="embodiment">Embodiment</string>
    <string name="foresight">Foresight</string>
    <string name="anticipation">Anticipation</string>
    <string name="if_kelly_has_brown_hair_then_select_two">If Kelly has brown hair, then ...... (Select two)</string>
    <string name="rachel_har_short_hair">Rachel har short hair</string>
    <string name="kelly_s_hair_s_color_is_as_rachael_s_hair_s">Kelly’s hair\'s color is as Rachael’s hair\'s</string>
    <string name="some_mils_are_hils">Some mils are jils</string>
    <string name="kelly_has_long_hair">Kelly has long hair</string>
    <string name="rachel_has_brown_hair">Rachel has brown hair</string>
    <string name="all_mils_are_hils_some_hils_are_jils_and_some_tils_are_rils_so">All mils are hils, some hils are jils, and some tils are rils, so</string>
    <string name="all_hings_are_tings">All hings are tings</string>
    <string name="all_tils_are_hils">All tils are hils</string>
    <string name="some_jils_are_hils">Some jils are hils</string>
    <string name="some_pings_are_lings_all_hings_are_fings_and_some_tings_are_pings">Some pings are lings, all hings are fings, and some tings are pings</string>
    <string name="some_fings_are_lings">Some fings are lings</string>
    <string name="all_pings_are_lings">All pings are lings</string>
    <string name="all_mils_are_jils">All mils are jils</string>
    <string name="some_lings_are_tings">Some lings are tings</string>
    <string name="a_family_consists_of_six_members_p_q_r_s_t_and_u_there_are_two_married_couples_q_is_a_doctor_and_the_father_of_t_u_is_grandfather_of_r_and_is_a_contractor_s_is_grandmother_of_t_and_is_a_housewife_there_is_one_doctor_one_contractor_one_nurse_one_housewife_and_two_students_in_the_family_what_is_the_profession_of_p">A family consists of six members P, Q, R, S, T and U. There are two married couples. Q is a doctor and the father of T. U is grandfather of R and is a contractor. S is grandmother of T and is a housewife. There is one doctor, one contractor, one nurse, one housewife and two students in the family. What is the profession of P ?</string>
    <string name="contractor">Contractor</string>
    <string name="nurse">Nurse</string>
    <string name="housewife">Housewife</string>
    <string name="find_the_odd_one_out">Find the odd one out</string>
    <string name="father_in_law">Father in law</string>
    <string name="husband">Husband</string>
    <string name="maternal_uncle">Maternal uncle</string>
    <string name="brother">Brother</string>
    <string name="mermaid">Mermaid</string>
    <string name="dinosaur">Dinosaur</string>
    <string name="sphinx">Sphinx</string>
    <string name="doctor">Doctor</string>
    <string name="introducing_a_man_a_woman_said_his_wife_is_the_only_daughter_of_my_father_how_is_that_man_related_to_the_woman">Introducing a man, a woman said, His wife is the only daughter of my father.How is that man related to the woman?</string>
    <string name="todo">TODO</string>
    <string name="which_cube_cannot_be_made_based_on_the_unfolded_cube">Which cube cannot be made based on the unfolded cube?</string>
    <string name="which_figure_is_identical_to_the_first">Which figure is identical to the first?</string>
    <string name="which_group_of_shapes_can_be_assembled_to_make_the_shape_shown">Which group of shapes can be assembled to make the shape shown?</string>
    <string name="what_comes_next_in_the_following_series">What comes next in the following series?</string>
    <string name="_0_30">0:30</string>
    <string name="_0_15">0:15</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="_25x5_100">25x5=100</string>
    <string name="_1_5_9_13_18_21">1,5,9,13,18,21</string>
    <string name="_30_55_20_65">30+55-20=65</string>
    <string name="_12x5_60">12x5=60</string>
    <string name="_11x13_142">11x13=142</string>
    <string name="_1_8_27_64_125_216">1,8,27,64,125,216</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="spoon_knife_fork">spoon, knife, fork</string>
    <string name="knife_fork_spoon">knife, fork, spoon</string>
    <string name="spoon_fork_knife">spoon, fork, knife</string>
    <string name="fork_knife_spoon">fork, knife, spoon</string>
    <string name="_5_2_9">5, 2, 9</string>
    <string name="_2_9_5">2, 9, 5</string>
    <string name="_9_2_5">9, 2, 5</string>
    <string name="_5_9_2">5, 9, 2</string>
    <string name="_7">7</string>
    <string name="_7_3_5_2">7, 3, 5, 2</string>
    <string name="_2_3_5_7">2, 3, 5, 7</string>
    <string name="_2_5_3_7">2, 5, 3, 7</string>
    <string name="_5_2_3_7">5, 2, 3, 7</string>
    <string name="green_violet_yellow_red">green, violet, yellow, red</string>
    <string name="red_violet_yellow_green">red, violet, yellow, green</string>
    <string name="red_yellow_green_violet">red, yellow, green, violet</string>
    <string name="green_yellow_violet_red">green, yellow, violet, red</string>
    <string name="_41_38_72_91_20">41, 38, 72, 91, 20</string>
    <string name="_41_72_91_38_20">41, 72, 91, 38, 20</string>
    <string name="_20">20</string>
    <string name="_41_91_72_38_20">41, 91, 72, 38, 20</string>
    <string name="_41_72_38_91_20">41, 72, 38, 91, 20</string>
    <string name="dog_hamster_fish_bird_cat">dog, hamster, fish, bird, cat</string>
    <string name="dog_fish_hamster_bird_cat">dog, fish, hamster, bird, cat</string>
    <string name="dog_bird_hamster_fish_cat">dog, bird, hamster, fish, cat</string>
    <string name="dog_bird_fish_hamster_cat">dog, bird, fish, hamster, cat</string>
    <string name="personal_data">Personal data</string>
    <string name="mix_white">mix=white</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_50">50</string>
    <string name="_35">35</string>
    <string name="_13">13</string>
    <string name="_2">2</string>
    <string name="total_result">Total Result</string>
</resources>