<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verbal3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/vq32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/i_love_to_read_to_sing_to_jump_rope"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose3" />

    <RadioButton
        android:id="@+id/vq331"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/ticket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq33" />

    <RadioButton
        android:id="@+id/vq332"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq331" />

    <RadioButton
        android:id="@+id/vq333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/money"
        app:layout_constraintStart_toStartOf="@+id/vq33"
        app:layout_constraintTop_toBottomOf="@+id/vq33" />

            <RadioButton
                android:id="@+id/vq334"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/access"
                app:layout_constraintStart_toStartOf="@+id/vq333"
                app:layout_constraintTop_toBottomOf="@+id/vq333" />

    <RadioButton
        android:id="@+id/vq321"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/and_i_dance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose3" />

    <RadioButton
        android:id="@+id/vq322"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/and_dancing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq321" />

    <RadioButton
        android:id="@+id/vq323"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/or_to_have_danced"
        app:layout_constraintStart_toStartOf="@+id/choose3"
        app:layout_constraintTop_toBottomOf="@+id/choose3" />

    <RadioButton
        android:id="@+id/vq324"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/and_to_dance"
        app:layout_constraintStart_toStartOf="@+id/vq323"
        app:layout_constraintTop_toBottomOf="@+id/vq323" />

    <TextView
        android:id="@+id/choose3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/choose_the_word_s_that_best_completes_the_sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq312" />

    <RadioButton
        android:id="@+id/vq311"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/thus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq31" />

    <RadioButton
        android:id="@+id/vq312"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/colonel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq311" />

    <RadioButton
        android:id="@+id/vq313"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/irregardless"
        app:layout_constraintStart_toStartOf="@+id/vq31"
        app:layout_constraintTop_toBottomOf="@+id/vq31" />

    <RadioButton
        android:id="@+id/vq314"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/literaly"
        app:layout_constraintStart_toStartOf="@+id/vq313"
        app:layout_constraintTop_toBottomOf="@+id/vq313" />

    <TextView
        android:id="@+id/vq31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/which_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/choose_the_pair_of_words_that_best_completes_the_sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq322" />

            <Button
                android:id="@+id/vnext3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="61dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vq334" />

    <TextView
        android:id="@+id/vq33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/the_students_couldn_t_enter_the_teachers_room_because_they_didn_t_have_to_it"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose32" />

    <TextView
        android:id="@+id/vtimer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_1_00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>