<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verbal5">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/vq52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/poetry_is_to_rhyme_as_philosophy_is_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq512" />

    <RadioButton
        android:id="@+id/vq531"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/drop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq53" />

    <RadioButton
        android:id="@+id/vq532"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/spit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq531" />

    <RadioButton
        android:id="@+id/vq533"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/squel"
        app:layout_constraintStart_toStartOf="@+id/vq53"
        app:layout_constraintTop_toBottomOf="@+id/vq53" />

    <RadioButton
        android:id="@+id/vq534"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fall"
        app:layout_constraintStart_toStartOf="@+id/vq533"
        app:layout_constraintTop_toBottomOf="@+id/vq533" />

    <RadioButton
        android:id="@+id/vq521"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/imagination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq52" />

    <RadioButton
        android:id="@+id/vq522"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq521" />

    <RadioButton
        android:id="@+id/vq523"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/bi_laws"
        app:layout_constraintStart_toStartOf="@+id/vq52"
        app:layout_constraintTop_toBottomOf="@+id/vq52" />

    <RadioButton
        android:id="@+id/vq524"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/theory"
        app:layout_constraintStart_toStartOf="@+id/vq523"
        app:layout_constraintTop_toBottomOf="@+id/vq523" />

    <RadioButton
        android:id="@+id/vq511"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/path"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq51" />

    <RadioButton
        android:id="@+id/vq512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/train"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq511" />

    <RadioButton
        android:id="@+id/vq513"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/wheat"
        app:layout_constraintStart_toStartOf="@+id/vq51"
        app:layout_constraintTop_toBottomOf="@+id/vq51" />

    <RadioButton
        android:id="@+id/vq514"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/holy"
        app:layout_constraintStart_toStartOf="@+id/vq513"
        app:layout_constraintTop_toBottomOf="@+id/vq513" />

    <TextView
        android:id="@+id/vq51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/is_to_trail_as_grain_is_to_grail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vq53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/check_the_two_words_that_mean_the_same_for_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vq522" />

            <Button
                android:id="@+id/vnext5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="107dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vq534" />

    <TextView
        android:id="@+id/vtimer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_1_00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>